--- a/README.mkd
+++ b/README.mkd
@@ -1,11 +1,22 @@
 LoLi-WF
 =
----
 
 LoLi-WF is an embeddable web framework like Angular.JS using LoLi instead of JS, based on LoLi-JS.
 
 ---
+Features
+=
+Load `.loli` files from server side into client-side environment, and evaluate LoLi code within HTML. For example:
+
+    <html>
+    <body>
+    <loli-ns>foo.loli</loli-ns>
+    <loli-exp>(foo bar) ;Just some arbitrary LoLi code</loli-exp>
+    ...
+    </body>
+    </html>
+
+---
 Licence
 =
----
 **GPLv3+**
