--- a/README.mkd
+++ b/README.mkd
@@ -11,7 +11,7 @@ Load `.loli` files from server side into client-side environment, and evaluate L
     <html>
     <body>
     <loli-ns>foo.loli</loli-ns>
-    <loli-exp>(foo bar) ;Just some arbitrary LoLi code</loli-exp>
+    <loli-exp>(foo bar) ;Just arbitrary LoLi code</loli-exp>
     ...
     </body>
     </html>
