--- a/README.mkd
+++ b/README.mkd
@@ -1,6 +1,8 @@
 LoLi-WF
 =
 
+![LoLi-WF](/loliwf.png)
+
 LoLi-WF is an embeddable web framework like Angular.JS using LoLi instead of JS, based on LoLi-JS.
 
 ---
