--- a/README.mkd
+++ b/README.mkd
@@ -3,7 +3,7 @@ LoLi-WF
 
 ![LoLi-WF](/loliwf.png)
 
-LoLi-WF is an embeddable web framework like Angular.JS using LoLi instead of JS, based on LoLi-JS.
+LoLi-WF is an embeddable *meta* web framework using LoLi instead of JS, based on LoLi-JS.
 
 ---
 Features
@@ -15,6 +15,11 @@ Load `.loli` files from server side into client-side environment, and evaluate L
     <loli-ns>foo.loli</loli-ns>
     <loli-exp>(foo bar) ;Just arbitrary LoLi code</loli-exp>
     ...
+    <loli-exp>
+    (if *some-condition*
+        <html-element> </html-element>
+        <html-element> </html-element>)
+    </loli-exp>
     </body>
     </html>
 
